; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_packer.c_value_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_packer.c_value_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"Field size %d bits not handled\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i8*)* @value_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @value_write(i32 %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %6, align 4
  %10 = mul nsw i32 %9, 8
  switch i32 %10, label %42 [
    i32 8, label %11
    i32 16, label %18
    i32 32, label %26
    i32 64, label %34
  ]

11:                                               ; preds = %4
  %12 = load i32, i32* %7, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr i8, i8* %13, i64 %15
  %17 = bitcast i8* %16 to i32*
  store i32 %12, i32* %17, align 4
  br label %46

18:                                               ; preds = %4
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @cpu_to_be16(i32 %19)
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr i8, i8* %21, i64 %23
  %25 = bitcast i8* %24 to i32*
  store i32 %20, i32* %25, align 4
  br label %46

26:                                               ; preds = %4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @cpu_to_be32(i32 %27)
  %29 = load i8*, i8** %8, align 8
  %30 = load i32, i32* %5, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr i8, i8* %29, i64 %31
  %33 = bitcast i8* %32 to i32*
  store i32 %28, i32* %33, align 4
  br label %46

34:                                               ; preds = %4
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @cpu_to_be64(i32 %35)
  %37 = load i8*, i8** %8, align 8
  %38 = load i32, i32* %5, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr i8, i8* %37, i64 %39
  %41 = bitcast i8* %40 to i32*
  store i32 %36, i32* %41, align 4
  br label %46

42:                                               ; preds = %4
  %43 = load i32, i32* %6, align 4
  %44 = mul nsw i32 %43, 8
  %45 = call i32 @pr_warn(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %44)
  br label %46

46:                                               ; preds = %42, %34, %26, %18, %11
  ret void
}

declare dso_local i32 @cpu_to_be16(i32) #1

declare dso_local i32 @cpu_to_be32(i32) #1

declare dso_local i32 @cpu_to_be64(i32) #1

declare dso_local i32 @pr_warn(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
